...
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n1. Enter your full name" />

        <EditText
            android:id="@+id/answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type name here"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/light_text"
...
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n\n2. Enter your age" />

        <Spinner
            android:id="@+id/answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_outline"/>

        <TextView
            android:id="@+id/weightUnit"
...
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n3. Enter your current weight" />


        <EditText
            android:id="@+id/answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input weight here"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/light_text"
...
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n\n4. Enter your target weight" />

        <EditText
            android:id="@+id/answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Input weight here"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/light_text"
...
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n\n5. Enter your workout level" />

        <RadioGroup
            android:id="@+id/answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optionBeginner"
                android:layout_width="wrap_content"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/answer6Biceps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Biceps"
                android:textColor="@color/light_text"
                android:layout_gravity="start" />

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/answer6Triceps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Triceps"
                android:textColor="@color/light_text"
                android:layout_gravity="start" />

...
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/light_text"
            android:text="\n\n7. Select the equipment you have access to" />

        <RadioGroup
            android:id="@+id/answer7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/optionGym"
                android:layout_width="wrap_content"
...
                android:text="Bodyweight"
                android:textColor="@color/light_text" />
        </RadioGroup>

        <!-- Submit -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Submit"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/light_text" />
...
